# eq3_6

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml  snapshots.yml
data/xchtlib/: swv2sx.3i
include/eqlib/: eql1s.h  eql1sd.h  eqldv.h  eqlge.h  eqlj8.h  eqlj8d.h  eqlk8.h  eqlk8d.h  eqlo8.h  eqlo8d.h  eqlpar.h  eqltf1.h  eqltf2.h  eqlwd.h  eqlwdd.h
include/xcon3/: x3op7.h  x3op7d.h
include/xcon6/: x6op7.h  x6op7d.h  x6sbsp.h
scripts/: README.md  eq36cfg  runeq36
src/: Makefile.exe.in  Makefile.in  Makefile.lib.in
src/eq3nr/: CMakeLists.txt  Makefile
src/eq3nr/src/: CMakeLists.txt  aaaeq3.f  aaaeq3.f90  arrset.f  arrset.f90  arrsim.f  arrsim.f90  bkdeq3.f  bkdeq3.f90  chkinx.f  chkinx.f90  dawfix.f  dawfix.f90  dfaltx.f  dfaltx.f90  echox.f  echox.f90  eq3nr.f  eq3nr.f90  intbs3.f  intbs3.f90  intge3.f  intge3.f90  intieb.f  intieb.f90  intinx.f  intinx.f90  intnsp.f  intnsp.f90  jfloha.f  jfloha.f90  makelinks  ndiagx.f  ndiagx.f90  rd3ind.f  rd3ind.f90  (+14 more)
src/eq6/: CMakeLists.txt  Makefile
src/eq6/src/: CMakeLists.txt  aaaeq6.f  aaaeq6.f90  absswb.f  absswb.f90  aderiv.f  aderiv.f90  adprpl.f  adprpl.f90  ataylr.f  ataylr.f90  bderiv.f  bderiv.f90  betars.f  betars.f90  bkdeq6.f  bkdeq6.f90  caft1.f  caft1.f90  cdappl.f  cdappl.f90  cdappl.k  chdxec.f  chdxec.f90  chdxgr.f  chdxgr.f90  chdxgz.f  chdxgz.f90  chdxtr.f  chdxtr.f90  chdxtz.f  chdxtz.f90  chkinz.f  chkinz.f90  chksar.f  chksar.f90  chksir.f  chksir.f90  chksrr.f  chksrr.f90  (+241 more)
src/eqlib/: CMakeLists.txt  Makefile
src/eqlibg/: CMakeLists.txt  Makefile
src/eqlibg/src/: CMakeLists.txt  aaaelg.f  aaaelg.f90  bdmlx.f  bdmlx.f90  bdslx.f  bdslx.f90  ca3bar.f  ca3bar.f90  cabar.f  cabar.f90  cfje.f  cfje.f90  cfjest.f  cfjest.f90  cfxi.f  cfxi.f90  cfxist.f  cfxist.f90  csigm.f  csigm.f90  cwrpjt.f  cwrpjt.f90  elmdd.f  elmdd.f90  evptzc.f  evptzc.f90  gbdot.f  gbdot.f90  gcoeff.f  gcoeff.f90  gcscal.f  gcscal.f90  gdavie.f  gdavie.f90  gdd.f  gdd.f90  gelam.f  gelam.f90  gesum.f  (+41 more)
src/eqlibu/: CMakeLists.txt  Makefile
src/eqpt/: CMakeLists.txt  Makefile
src/icodes/: epclib.for  readme.txt  runeq3.for  runeq6.for  runeqpt.for  xcif3.for  xcif6.for
src/scripts/: readme.txt  runeq36  runeqpt  xcif36
src/xcon3/: CMakeLists.txt  Makefile
src/xcon3/inc/: x3op7.h
src/xcon3/src/: CMakeLists.txt  aaaxc3.f  aaaxc3.f90  bkdxc3.f  bkdxc3.f90  rd3d7.f  rd3d7.f90  rd3d8.f  rd3d8.f90  rd3d8b.f  rd3d8b.f90  rd3w6.f  rd3w6.f90  rd3w7.f  rd3w7.f90  rd3w8.f  rd3w8.f90  wr3d7.f  wr3d7.f90  wr3d72.f  wr3d72.f90  wr3d8.f  wr3d8.f90  wr3w6.f  wr3w6.f90  wr3w7.f  wr3w7.f90  wr3w8.f  wr3w8.f90  xcon3.f  xcon3.f90
src/xcon6/: CMakeLists.txt  Makefile
test/: Makefile  almost_same.py  eq3nr.bats  eq6.bats  eqpt.bats  test.bats  test.sh  util.sh
test/3tlib_cmp/: acidmwb.3i  bo3bufs.3i  cahco3.3i  h2so4p02.3i  h2so4p1.3i  j13wsf.3i  oxcalhem.3i  ph4hcl.3i  quenchfl.3i  rwtst.3i  sw2vxch.3i  swbasw.3i  swco2.3i  swg1sx.3i  swmjdofe.3i  swtst.3i  swv1sx.3i
test/3tlib_fmt/: c4pgwbN2.3i  deadseaw.3i  f24vc7b3.3i  f24vc7m.3i
test/3tlib_hmw/: epsomite.3i  swlmahcl.3i  swmajp.3i  swv1sxk.3i
test/3tlib_ymp/: co3aqui.3i  hclp1.3i  henleyph.3i  sio2.3i  swmaj.3i  swmajd.3i  swpar.3i  swtst.3i
test/3tlib_ypf/: Sylcacl2.3i  arcsyl.3i  syl100.3i  sylhal2.3i
test/6tlib_cmp/: microft.6i  pptmins.6i  pptqtz.6i  swxrca.6i
test/6tlib_fmt/: c4pgwbN2.6i  f24vc7k4.6i  gypnaclx.6i
test/6tlib_hmw/: calhal.6i  evapsw.6i  gypanhy.6i  mgso4.6i  swv1sxk.6i
test/6tlib_ymp/: crisqtz.6i  j13wsf.6i  micro.6i  rwtitr.6i  swtitr.6i  swxrcaft.6i
test/6tlib_ypf/: calhal90.6i
test/eq3nr/: test.sh
test/eq6/: test.sh
test/eqpt/: test.sh
test/test_helper/: almost-same.bash  almost-same.py  common-setup.bash
(+1510 files in other folders)
